--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
           Otimize a Gestão de Horas com Facilidade</h2>
         <p class="cor-5 f3-texto">Simplifique o controle de ponto da sua equipe com o RHID. Registre, acompanhe e gerencie a presença dos funcionários de forma eficiente. Conformidade e eficiência em um único software. Experimente agora!</p>
         <button class="botao">SOLICITAR COTAÇÃO</button>
-        <button class="botao secundario">TESTE GRÁTIS</button>
       </div>
       <div>
         <img src="/IMAGENS/celular.png" alt="celular">
@@ -48,7 +47,7 @@
 
   <section class="clientes-bg">
     <div class="clientes container">
-      <h1 class="cor-1 f1-titulo">Empresas de sucesso escolhem o RHID</h1>
+      <h1 class="cor-1 f1-titulo">Empresas de sucesso<br> escolhem o RHID</h1>
       <ul>
         <li><img src="/IMAGENS/Logo1.png" alt="cliente-1"></li>
         <li><img src="/IMAGENS/Logo2.png" alt="cliente-2"></li>
@@ -84,10 +83,12 @@
   </section>
 
   <section class="vantagens-bg">
-
     <h1 class="f1-titulo container">Descomplique sua Gestão de <br>
       Ponto com as soluções do RHiD</h1>
     <div class="vantagens container">
+      <div class="teste">
+
+      </div>
       <div class="vantagens-itens">
         <h3 class="cor-s1 f4-titulo-itens">Fácil utilização</h3>
         <p class="cor-5 f3-texto">A solução RHiD foi desenvolvida com foco em usabilidade, tornando a experiência do gestor de RH e do próprio funcionário a mais intuitiva possível. O sistema trabalha em nuvem, não sendo necessária nenhuma instalação, e a interface 100% web permite o uso de qualquer dispositivo para realizar os acessos.</p>
@@ -113,12 +114,11 @@
     </div>
     <div class="container">
       <button class="botao">SOLICITAR COTAÇÃO</button>
-      <button class="botao secundario">TESTE GRÁTIS</button>
     </div>
   </section>
 
   <section class="contador-bg">
-    <div class="contador">
+    <div class="contador container">
       <h1 class="cor-2 f1-titulo"> <span class="cor-p2">99% </span>Clientes Satisfeitos em todo o Brasil</h1>
       <div class="contador-itens">
         <div>
@@ -153,9 +153,7 @@
       <p class="cor-2 f2-subtitulo">Fale com um de nossos consutores e <br> solicite seu orçamento sem compromisso!</p>
       <button class="botao">AGENDE UMA DEMONSTRAÇÃO</button>
     </div>
-    <div>
-      <img class="otimizar-img" src="/imagens/mulher-2.png" alt="mulher-business">
-    </div>
+    <img class="otimizar-img" src="/imagens/mulher-2.png" alt="mulher-business">
   </section>
 
   <footer class="footer-bg">
