--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;0,600;0,700;1,300;1,400&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
   <header class="header-bg">
     <div class="header container">
       <div>
-        <img src="/IMAGENS/LOGO.png" alt="LOGO-IDREP">
+        <img src="imagens/LOGO.png" alt="LOGO-IDREP">
       </div>
       <nav aria-label="primaria">
         <ul class="header-menu">
@@ -40,7 +40,7 @@
         <button class="botao">SOLICITAR COTAÇÃO</button>
       </div>
       <div>
-        <img src="/IMAGENS/celular.png" alt="celular">
+        <img src="imagens/celular.png" alt="celular">
       </div>
     </div>
   </main>
@@ -49,11 +49,11 @@
     <div class="clientes container">
       <h1 class="cor-1 f1-titulo">Empresas de sucesso<br> escolhem o RHID</h1>
       <ul>
-        <li><img src="/IMAGENS/Logo1.png" alt="cliente-1"></li>
-        <li><img src="/IMAGENS/Logo2.png" alt="cliente-2"></li>
-        <li><img src="/IMAGENS/Logo3.png" alt="cliente-3"></li>
-        <li><img src="/IMAGENS/Logo4.png" alt="cliente-4"></li>
-        <li><img src="/IMAGENS/Logo5.png" alt="cliente-5"></li>
+        <li><img src="imagens/Logo1.png" alt="cliente-1"></li>
+        <li><img src="imagens/Logo2.png" alt="cliente-2"></li>
+        <li><img src="imagens/Logo3.png" alt="cliente-3"></li>
+        <li><img src="imagens/Logo4.png" alt="cliente-4"></li>
+        <li><img src="imagens/Logo5.png" alt="cliente-5"></li>
       </ul>
     </div>
   </section>
@@ -109,7 +109,7 @@
         <p class="cor-5 f3-texto">O RHiD permite realizar o controle de ponto de forma bastante flexível, atendendo a uma enorme gama de empresas, sindicatos, horários e particularidades da legislação brasileira. É possível ainda trabalhar com um número ilimitado de funcionários e empresas e ainda realizar o controle de fluxo de aprovações.</p>
       </div>
       <div class="vantagens-diagrama">
-        <img src="/IMAGENS/diagrama-rhid.png" alt="diagrama-rhid">
+        <img src="imagens/diagrama-rhid.png" alt="diagrama-rhid">
       </div>
     </div>
     <div class="container">
@@ -142,7 +142,7 @@
       <h1 class="f1-titulo cor-s1">Integrado <span class="cor-p2">100% em Nuvem</span>
         com nossos equipamentos</h1>
       <div>
-        <img src="/IMAGENS/produtos.png" alt="imagem-produtos">
+        <img src="imagens/produtos.png" alt="imagem-produtos">
       </div>
     </div>
   </section>
@@ -153,7 +153,7 @@
       <p class="cor-2 f2-subtitulo">Fale com um de nossos consutores e <br> solicite seu orçamento sem compromisso!</p>
       <button class="botao">AGENDE UMA DEMONSTRAÇÃO</button>
     </div>
-    <img class="otimizar-img" src="/imagens/mulher-2.png" alt="mulher-business">
+    <img class="otimizar-img" src="imagens/mulher-2.png" alt="mulher-business">
   </section>
 
   <footer class="footer-bg">
