--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header-bg">
     <div class="header container">
       <div>
-        <img src="imagens/LOGO.png" alt="LOGO-IDREP">
+         <a href="./"><img src="/IMAGENS/LOGO.png" alt="LOGO-IDREP"></a>
       </div>
       <nav aria-label="primaria">
         <ul class="header-menu">
